# rust-enum_variant_eq

./: .gitignore  Cargo.toml  README.md
enum_variant_eq_derive/: Cargo.toml  README.md
enum_variant_eq_derive/src/: lib.rs
src/: lib.rs
