[package]
name = "enum_variant_eq_derive"
version = "0.1.1"
edition = "2021"

license = "MIT"
description = "Dependency macro for enum_variant_eq"
homepage = "https://github.com/A4-Tacks/rust-enum_variant_eq"
repository = "https://github.com/A4-Tacks/rust-enum_variant_eq"
readme = "./README.md"
keywords = ["derive", "enum", "macro", "equal", "variant"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

